assets/styles/style.scss
@use "animations";
@use "colormode";
@use "stylemixins";

// scrollbar
::-webkit-scrollbar {
	width: 10px;

	&-track {
		background-color: var(--nav-acrylic);
		width: 5px;
	}

	&-thumb {
		background-color: var(--scroll);
		border-radius: 1em;
	}
}

*,
*::before,
*::after {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	scroll-behavior: smooth;
	scroll-padding-top: 100px;
	@include animations.fade-in;
}

body {
	background-color: var(--background-color);
	font-family: "Work Sans", sans-serif;
	color: var(--text);
	transition: 0.2s ease-in-out all;
	// overflow-x: hidden;
	overflow-x: hidden;
}

nav {
	display: flex;
	background-color: var(--nav-background-color);
	padding: 1em 2em;
	position: sticky;
	top: 0;
	transition: 0.2s ease-in-out all;
	border-bottom: 1em #50282f;
	z-index: 10;
	align-items: center;

	.hamburger {
		display: none;
	}

	// acrylic styling on scroll
	&.acrylic {
		background-color: var(--nav-acrylic);
		backdrop-filter: blur(2em);
	}

	// nav darkmode button
	input {
		appearance: none;
		width: 3em;
		height: 3em;
		background-color: var(--colormode-outer);
		border-radius: 2em;
		transition: ease-in-out all 0.2s;
		cursor: pointer;
		position: relative;
		margin-left: 2em;

		&::before {
			content: "";
			width: 1.1em;
			height: 2.1em;
			border-radius: 0 1em 1em 0;
			background-color: var(--colormode-inner);
			position: absolute;
			top: 15%;
			right: 15%;
			transition: ease-in-out all 0.2s;
		}

		&:hover {
			@include animations.pulsing;
			background-color: var(--colormode-hover-outer);
			transition: ease-in-out all 0.2s;

			&::before {
				background-color: var(--colormode-hover-inner);
			}
		}
	}

	// nav links
	a {
		color: var(--nav-links);
		text-decoration: none;
		transition: 0.2s ease-in-out;
		position: relative;

		&::after {
			background-color: var(--nav-links);
			transition: all 0.2s ease-in-out;
			content: "";
			display: block;
			position: absolute;
			width: 0;
			bottom: 0;
			right: 0;
			height: 0.14em;
			margin: -0.4em 0;
			border-radius: 25px;
		}

		&:hover {
			color: var(--nav-hover);
			transition: all 0.2s ease-in-out;
		}

		&:hover::after {
			background-color: var(--nav-hover);
			left: 0;
			width: 100%;
		}
	}

	.logo {
		flex-grow: 1;

		img {
			height: 6vh;
		}
	}

	.nav__links {
		display: flex;
		gap: 2em;
		align-items: center;
		flex-wrap: wrap;
		margin-left: 1em;
	}
}

// stripes
// .stripes__container1 {
// 	.stripe1 {
// 		@include stylemixins.stripe1;
// 		background-color: var(--stripe1);
// 		margin-top: 200px;
// 	}
// }

// media queries
@media (max-width: 768px) {
	nav {
		// darkmode button
		input {
			margin-right: 2em;
		}

		// src tutorial hamburger menu: https://www.youtube.com/watch?v=OFKBep95lb4
		.hamburger {
			position: relative;
			display: block;
			width: 2.5em;
			height: 3em;
			cursor: pointer;
			background: none;
			border: none;

			.bar,
			&::after,
			&::before {
				content: "";
				display: block;
				width: 100%;
				height: 2px;
				background-color: var(--hamburger);
				margin: 8px 0;
				transition: 0.4s;
			}

			// on rotation, when .is-active is added as class
			&.is-active::before {
				transform: rotate(-45deg) translate(-9px, 6px);
			}

			&.is-active::after {
				transform: rotate(45deg) translate(-8px, -5px);
			}

			&.is-active .bar {
				opacity: 0;
			}
		}

		.logo {
			z-index: 1;
		}

		.nav__links {
			margin: 0;
			display: block;
			position: fixed;
			border: none;
			left: 100%;
			top: 0;
			right: 0;
			width: 100%;
			min-height: 100vh;
			background-color: var(--nav-background-color);
			padding-top: 14vh;
			transition: all ease-in-out 0.4s;

			&.is-active {
				left: 0;
			}

			a {
				display: block;
				text-align: center;
				padding: 1em;
				// background-color: var(--nav-hamburger-color);
				padding: 1.5em;
				margin: 1em 10vw;
				border-bottom: 2px solid;

				&::after {
					display: none;
				}
			}
		}
	}
}

// media queries

// max-widt 320

